--- a/config.json
+++ b/config.json
@@ -12,7 +12,7 @@
     ],
     "keyspace": "eigengraph"
   },
-  "queue": "",
+  "queue": "rethinkdb",
   "kafka": {
     "hosts": [
       "localhost:2181"
