--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "bunyan": "^1.8.4",
     "cassandra-driver": "^3.1.5",
     "co": "^4.6.0",
-    "kafka-node": "^1.0.7",
     "microtime": "^2.1.1",
+    "no-kafka": "^3.0.1",
     "node-uuid": "^1.4.7",
     "request": "^2.78.0",
     "restify": "^4.1.1",
