--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "bunyan": "^1.8.4",
     "cassandra-driver": "^3.1.5",
     "co": "^4.6.0",
+    "dotenv": "^5.0.0",
     "microtime": "^2.1.1",
     "no-kafka": "^3.0.1",
     "node-uuid": "^1.4.7",
