--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-port = 8000
-log_level = info
-storage = rethinkdb
-cassandra= { "contactPoints": ["localhost"], "keyspace": "eigengraph"}
-rethinkdb = { "host": "localhost", "db": "eigengraph" }
-queue = rethinkdb
-kafka = { "hosts": ["localhost:9092"], "client-id": "client-data", "topic": "events" }
+egf_port = 8000
+egf_log_level = info
+egf_storage = rethinkdb
+egf_cassandra = { "contactPoints": ["localhost"], "keyspace": "eigengraph"}
+egf_rethinkdb = { "host": "localhost", "db": "eigengraph" }
+egf_queue = rethinkdb
+egf_kafka = { "hosts": ["localhost:9092"], "client-id": "client-data", "topic": "events" }
